syntax = "proto3";

option go_package = "github.com/mrphil2105/ntpSimulation";

import "google/protobuf/timestamp.proto";

package ntpSimulation;

service Ntp {
  rpc getTime(SendTime) returns (SendTime) {}
}

message SendTime {
  google.protobuf.Timestamp time = 1;
}
